Corrigindo bug de rota para bateria

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<ul>
 			<li>
-				<a href="/drum-kit/index.html">1 - Bateria</a>
+				<a href="https://eduardosoareszup.github.io/js-30/drum-kit/index.html">1 - Bateria</a>
 			</li>
 		</ul>
 	</main>
